# uReticulum

./: .gitignore  CMakeLists.txt  LICENSE  README.md  TODO  flake.nix
examples/smoke/: main.cpp
firmware/heltec_v3/: CMakeLists.txt  sdkconfig.defaults  sdkconfig.rnode  sdkconfig.rnode_ble
firmware/heltec_v3/components/rtreticulum/: CMakeLists.txt
firmware/heltec_v3/main/: CMakeLists.txt  Kconfig.projbuild  glcdfont.h  heltec_v3_pins.h  lora_interface.cpp  lora_interface.h  main.cpp  nomadnet_node.cpp  nomadnet_node.h  oled.cpp  oled.h  radiolib_esp_idf_hal.h  rnode_ble_bridge.cpp  rnode_bridge.cpp  rnode_bridge.h  tcp_interface.cpp  tcp_interface.h
include/rtreticulum/: bytes.h  crc.h  destination.h  filesystem.h  hal.h  identity.h  interface.h  link.h  log.h  memory.h  msgpack.h  os.h  packet.h  resource.h  reticulum.h  transport.h  type.h
include/rtreticulum/cryptography/: aes.h  ed25519.h  fernet.h  hashes.h  hkdf.h  hmac.h  pkcs7.h  random.h  token.h  x25519.h
include/rtreticulum/filesystems/: posix.h
include/rtreticulum/interfaces/: loopback.h
include/ureticulum/: filesystem.h  hal.h  identity.h  interface.h  link.h  log.h  os.h  packet.h  resource.h  transport.h
include/ureticulum/filesystems/: posix.h
port/esp_idf/: hal_esp_idf.c
port/freertos/: hal_freertos.c
port/posix/: hal_posix.c
src/: bytes.cpp  crc.cpp  destination.cpp  filesystem.cpp  identity.cpp  interface.cpp  link.cpp  log.cpp  memory.cpp  msgpack.cpp  os.cpp  packet.cpp  resource.cpp  reticulum.cpp  transport.cpp
src/cryptography/: aes.cpp  ed25519.cpp  fernet.cpp  hashes.cpp  hkdf.cpp  hmac.cpp  token.cpp  x25519.cpp
src/filesystems/: posix.cpp
src/interfaces/: loopback.cpp
test/: test_bytes.cpp  test_crc.cpp  test_crypto.cpp  test_filesystem.cpp  test_identity.cpp  test_link.cpp  test_loopback.cpp  test_main.cpp  test_pkcs7.cpp  test_resource.cpp  test_reticulum_task.cpp  test_tlsf.cpp  test_transport.cpp  test_transport_concurrency.cpp
